--- a/po/fr.po
+++ b/po/fr.po
@@ -72,7 +72,7 @@ msgstr ""
 "Project-Id-Version: GNU e2fsprogs 1.42.11-rc0\n"
 "Report-Msgid-Bugs-To: tytso@alum.mit.edu\n"
 "POT-Creation-Date: 2014-07-05 23:41-0400\n"
-"PO-Revision-Date: 2014-07-13 15:59+0200\n"
+"PO-Revision-Date: 2014-08-13 00:49+0200\n"
 "Last-Translator: Samuel Thibault <samuel.thibault@ens-lyon.org>\n"
 "Language-Team: French <traduc@traduc.org>\n"
 "Language: fr\n"
@@ -2641,7 +2641,7 @@ msgstr ""
 #: e2fsck/unix.c:131
 #, c-format
 msgid "%s: %u/%u files (%0d.%d%% non-contiguous), %llu/%llu blocks\n"
-msgstr "%s : %u/%u fichiers (%0d.%d%% non contigüs), %llu/%llu blocs\n"
+msgstr "%s : %u/%u fichiers (%0d.%d%% non contigus), %llu/%llu blocs\n"
 
 #: e2fsck/unix.c:157
 #, c-format
