--- a/po/cs.po
+++ b/po/cs.po
@@ -71,7 +71,7 @@ msgstr ""
 "Project-Id-Version: e2fsprogs 1.42.11-rc0\n"
 "Report-Msgid-Bugs-To: tytso@alum.mit.edu\n"
 "POT-Creation-Date: 2014-07-05 23:41-0400\n"
-"PO-Revision-Date: 2014-07-06 21:09+0200\n"
+"PO-Revision-Date: 2014-07-16 21:58+0200\n"
 "Last-Translator: Petr Pisar <petr.pisar@atlas.cz>\n"
 "Language-Team: Czech <translation-team-cs@lists.sourceforge.net>\n"
 "Language: cs\n"
@@ -1918,7 +1918,7 @@ msgstr "Nemohu klonovat soubor: %m\n"
 #. @-expanded: Pass 2: Checking directory structure\n
 #: e2fsck/problem.c:1066
 msgid "Pass 2: Checking @d structure\n"
-msgstr "Průchod 2: Kontroluje se strukturu adresářů\n"
+msgstr "Průchod 2: Kontroluje se struktura adresářů\n"
 
 #. @-expanded: invalid inode number for '.' in directory inode %i.\n
 #: e2fsck/problem.c:1071
@@ -6286,8 +6286,8 @@ msgid "Should never happen: resize inode corrupt!\n"
 msgstr "Toto by se nikdy nemělo stát: iuzly pro změnu velikosti jsou poškozeny!\n"
 
 #: lib/ext2fs/ext2_err.c:11
-msgid "EXT2FS Library version 1.42.11"
-msgstr "Knihovna EXT2FS verze 1.42.11"
+msgid "EXT2FS Library version 1.42.10"
+msgstr "Knihovna EXT2FS verze 1.42.10"
 
 #: lib/ext2fs/ext2_err.c:12
 msgid "Wrong magic number for ext2_filsys structure"
