e2fsck: fix spelling error (strage vs storage)
Reported-by: Philipp Thomas <pth@suse.de>

Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/po/e2fsprogs.pot
+++ b/po/e2fsprogs.pot
@@ -2477,7 +2477,7 @@ msgstr ""
 
 #: e2fsck/problem.c:1752
 #, c-format
-msgid "Error flushing writes to strage device: %m\n"
+msgid "Error flushing writes to storage device: %m\n"
 msgstr ""
 
 #: e2fsck/problem.c:1871
