e2fsck: remove 'invalid' wording from error when extent block fails checksum
Don't say the physical block number is invalid if an extent block
fails only the checksum.  It passes checks, so it's not invalid.

Signed-off-by: Darrick J. Wong <darrick.wong@oracle.com>
Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/tests/f_extent_leaf_bad_csum/expect.1
+++ b/tests/f_extent_leaf_bad_csum/expect.1
@@ -1,6 +1,6 @@
 Pass 1: Checking inodes, blocks, and sizes
 Inode 12 extent block passes checks, but checksum does not match extent
-	(logical block 7, invalid physical block 1090, len 1)
+	(logical block 7, physical block 1090, len 1)
 Fix? yes
 
 Pass 2: Checking directory structure
