--- a/tests/f_extent_int_bad_csum/expect.1
+++ b/tests/f_extent_int_bad_csum/expect.1
@@ -1,6 +1,6 @@
 Pass 1: Checking inodes, blocks, and sizes
 Inode 12 extent block passes checks, but checksum does not match extent
-	(logical block 698, invalid physical block 1788, len 1)
+	(logical block 698, physical block 1788, len 1)
 Fix? yes
 
 Pass 2: Checking directory structure
