--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,11 @@
-e2fsprogs (1.43~WIP-2014-11-23-1) unstable; urgency=low
+e2fsprogs (1.43~WIP-2014-12-14-1) unstable; urgency=low
 
   * Merge in updates from the maint branch (changes from 1.42.12-1)
   * Add support for inline directories
   * Add support for the jbd2 checksum v3 format
+  * New dumpe2fs format
 
- -- Theodore Y. Ts'o <tytso@mit.edu>  Sun, 23 Nov 2014 16:49:41 -0500
+ -- Theodore Y. Ts'o <tytso@mit.edu>  Sun, 14 Dec 2014 22:49:03 -0500
 
 e2fsprogs (1.42.12-1) unstable; urgency=low
 
