--- a/tests/f_jnl_etb_alloc_fail/expect.1
+++ b/tests/f_jnl_etb_alloc_fail/expect.1
@@ -1,7 +1,7 @@
 Superblock has an invalid journal (inode 8).
 Clear? yes
 
-*** ext3 journal has been deleted - filesystem is now ext2 only ***
+*** journal has been deleted ***
 
 Superblock has_journal flag is clear, but a journal is present.
 Clear? yes
