--- a/tests/f_inlinedata_repair/expect.1
+++ b/tests/f_inlinedata_repair/expect.1
@@ -21,6 +21,9 @@ Salvage? yes
 Directory inode 32, block #0, offset 4: directory corrupted
 Salvage? yes
 
+Symlink /1 (inode #12) is invalid.
+Clear? yes
+
 Symlink /3 (inode #14) is invalid.
 Clear? yes
 
@@ -51,5 +54,5 @@ Unattached zero-length inode 35.  Clear? yes
 Pass 5: Checking group summary information
 
 test_filesys: ***** FILE SYSTEM WAS MODIFIED *****
-test_filesys: 27/128 files (0.0% non-contiguous), 18/512 blocks
+test_filesys: 26/128 files (0.0% non-contiguous), 18/512 blocks
 Exit status is 1
