configure.ac: fix up Debian naming scheme for its orig.tar.gz file
We are using a new convention for the 1.43-WIP releases which should
be less confusion by replacing the hyphens by periods (e.g.,
1.43~WIP.2016.03.06 instead of 1.43~WIP-2016-03-06).  This avoids
confusion regarding the debian release number (which uses the last
hyphen in the version string to separate the upstream version from the
release number).

Also fix a typo in the version number used in the debian changelog and
e2fslibs.symbols file.

Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-e2fsprogs (1.43~WIP.2016.03-06-1) unstable; urgency=low
+e2fsprogs (1.43~WIP.2016.03.06-1) unstable; urgency=low
 
   * New upstream release
   * Fix resize2fs bug that could leave block allocation bitmaps
