--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+e2fsprogs (1.43-2) unstable; urgency=medium
+
+  * Update watch file to check for the GPG signatures
+  * Use dh_update_autotools_control to update config.{guess,sub}
+    automatically when building the package.
+  * Only try to run update-initramfs if it exists
+  * Transition to dbgsym packages
+
+ -- Theodore Y. Ts'o <tytso@mit.edu>  Fri, 20 May 2016 14:07:40 -0400
+
 e2fsprogs (1.43-1) unstable; urgency=medium
 
   * New upstream version
